Bug 1302125 - Limit number of ERROR: GC found live Cell messages, r=mccr8

--HG--
extra : rebase_source : 93aba8f04ffbbab8b4b96842ef2d0a5e377514d9